--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "1.11.10",
     "expo": "~50.0.14",
     "expo-linking": "~6.2.2",
     "expo-navigation-bar": "~2.8.1",
