--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "immer": "^10.1.1",
     "lucide-react-native": "^0.314.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
